Configure services for Render deployment