@@ -5,7 +5,6 @@ import com.recommender.paper_recommender.dto.PaperPageDto;
 import com.recommender.paper_recommender.dto.PersonalizedRequest;
 import com.recommender.paper_recommender.model.ViewingHistory;
 import com.recommender.paper_recommender.repository.ViewingHistoryRepository;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -18,29 +17,27 @@ import java.util.stream.Collectors;
 @Service
 public class RecommendationService {
 
-    private final RestTemplate restTemplate = new RestTemplate();
-
-    // Use @Value to inject the URL from the docker-compose environment variable
-    @Value("${ML_SERVICE_URL}")
-    private String mlServiceUrl;
-
+    // Declare all fields together and make them final
+    private final RestTemplate restTemplate;
     private final ViewingHistoryRepository viewingHistoryRepository;
 
-    @Autowired
-    public RecommendationService(ViewingHistoryRepository viewingHistoryRepository) {
+    @Value("${ml.service.url}")
+    private String mlServiceUrl;
+
+    public RecommendationService(RestTemplate restTemplate, ViewingHistoryRepository viewingHistoryRepository) {
+        this.restTemplate = restTemplate;
         this.viewingHistoryRepository = viewingHistoryRepository;
     }
 
-    // Updated for pagination
     public PaperPageDto searchPapers(String query, int page, int size) {
-        String url = mlServiceUrl + "/search/?query=" + query + "&page=" + page + "&size=" + size;
+        String url = mlServiceUrl + "/search/?q=" + query + "&page=" + page + "&size=" + size;
         return restTemplate.getForObject(url, PaperPageDto.class);
     }
 
     public List<PaperDto> findSimilarPapers(int paperIndex) {
         String url = mlServiceUrl + "/recommend/?paper_index=" + paperIndex;
         PaperDto[] response = restTemplate.getForObject(url, PaperDto[].class);
-        return Arrays.asList(response);
+        return response != null ? Arrays.asList(response) : List.of();
     }
 
     @Transactional(readOnly = true)
@@ -48,7 +45,7 @@ public class RecommendationService {
         List<ViewingHistory> history = viewingHistoryRepository.findUserHistoryWithPapers(userId);
 
         if (history.isEmpty()) {
-            return List.of();
+            return List.of(); // Return empty list if no history
         }
 
         List<Integer> paperIndices = history.stream()
